# Thoth

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.ingestion  Dockerfile.mcp  LICENSE  README.md  docker-compose.yml  mcp_remote_bridge.py  pyproject.toml
.github/: copilot-instructions.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  docs.yml  infra-deploy.yml  python-package.yml  validate-infrastructure.yml
PACKAGE_NAME/: __about__.py
docs/: ARCHITECTURE.md  AWS_DEPLOYMENT.md  CLOUD_RUN_DEPLOYMENT.md  COVERAGE_SETUP.md  DEVELOPMENT.md  ENVIRONMENT_CONFIG.md  GITHUB_ACTIONS.md  GITHUB_ACTIONS_TERRAFORM_CLOUD.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ISSUES_62-65.md  LAMBDA_DEPLOYMENT.md  README.md  README_DOCS.md  SCHEDULER_SETUP.md  SPHINX_SETUP.md  TERRAFORM_CLOUD_CHECKLIST.md  TERRAFORM_CLOUD_SETUP.md  TERRAFORM_IAC_IMPLEMENTATION.md  TERRAFORM_STATE.md  TERRAFORM_STATE_FIX.md  gcp-logging-guide.md
docs/source/: ADR_SYNC_STRATEGY.md  EMBEDDING_MODEL.md  MCP_TOOLS.md  MCP_TOOLS_OLD.md  TOOLS.md  conf.py  coverage_summary.md  getting_started.rst  index.rst  testing.md
docs/source/api/: http.md  index.md  ingestion.rst  mcp_server.rst  modules.rst  openapi.yaml  thoth.rst  utils.rst
docs/source/architecture/: deployment.md  index.md  ingestion.md  mcp-server.md
docs/source/infrastructure/: index.md
docs/source/mcp_server/: overview.rst
docs/source/md/: ARCHITECTURE.md  AUTHENTICATION.md  CLOUD_RUN_DEPLOYMENT.md  DEVELOPMENT.md  ENVIRONMENT_CONFIG.md  MCP_TOOLS.md  REMOTE_INGESTION.md  SECRETS_SETUP.md  TEST_COVERAGE.md  VECTOR_STORE.md
infra/: README.md  backend.tf  bootstrap.tf  cloud_run.tf  main.tf  outputs.tf  scheduler.tf  secrets.tf  storage.tf  variables.tf  versions.tf
infra/bootstrap/: .gitignore  README.md  main.tf  variables.tf
infra/modules/api-gateway/: main.tf  outputs.tf  variables.tf
infra/modules/dynamodb/: main.tf  outputs.tf  variables.tf
infra/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/modules/eventbridge/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf  variables.tf
infra/modules/secrets/: main.tf  outputs.tf  variables.tf
lambda/: Dockerfile
scripts/: analyze_logs.py  bootstrap_terraform.sh  build-lambda-layer.sh  deploy-local.sh  deploy_cloud_run.sh  local_vector_cli.py  setup_secrets_and_scheduler.sh  thoth-mcp-client.sh  verify_deployment.sh
terraform/: .gitignore  .terraform-docs.yml  README.md  main.tf  setup.sh  terraform.tfvars.example  variables.tf
terraform/environments/: dev.tfvars
terraform/ingestion/: cloud_tasks.tf  firestore.tf  ingestion_worker.tf  module.tf
terraform/mcp/: cloud_run.tf  module.tf
terraform/shared/: iam.tf  main.tf  module.tf  outputs.tf  variables.tf
tests/: conftest.py  test_cli.py  test_monitoring.py  test_scheduler.py  test_thoth.py
tests/ingestion/: test_chunker.py  test_embedder.py  test_gcs_integration.py  test_gcs_repo_sync.py  test_gcs_sync.py  test_gitlab_api.py  test_incremental_sync.py  test_ingest_flow.py  test_job_manager.py  test_pipeline.py  test_repo_manager.py  test_s3_sync.py  test_vector_store.py  test_worker.py
tests/ingestion/parsers/: test_base.py  test_docx.py  test_factory.py  test_markdown.py  test_pdf.py  test_text.py
tests/ingestion/sources/: test_config.py
tests/mcp/: __init__.py  test_http_wrapper.py  test_server.py  test_tools.py
tests/mcp/server/: test_mcp_server.py
tests/mcp_server/: test_lambda_handler.py  test_mcp_server.py  test_plugins.py
tests/refresh/: __init__.py  test_handler.py
tests/shared/: test_cli.py  test_embedder.py  test_gcs_sync.py  test_health.py  test_monitoring.py  test_scheduler.py  test_vector_store.py
tests/shared/sources/: __init__.py  test_config.py
tests/shared/utils/: test_logger.py  test_secrets.py
tests/utils/: test_logger.py  test_secrets.py
thoth/: __about__.py  __init__.py  cli.py  http_wrapper.py  monitoring.py  scheduler.py
thoth/ingestion/: __init__.py  chunker.py  embedder.py  gcs_repo_sync.py  gcs_sync.py  gitlab_api.py  job_manager.py  pipeline.py  repo_manager.py  s3_sync.py  singletons.py  task_queue.py  vector_store.py  worker.py
thoth/ingestion/flows/: __init__.py  batch.py  clone.py  health.py  ingest.py  job_status.py  merge.py
thoth/ingestion/parsers/: __init__.py  base.py  docx.py  markdown.py  pdf.py  text.py
thoth/ingestion/sources/: __init__.py  config.py
thoth/mcp/: __init__.py  http_wrapper.py  server.py  tools.py
thoth/mcp/server/: __init__.py  server.py
thoth/mcp_server/: __init__.py  config.py  lambda_handler.py  server.py
thoth/mcp_server/plugins/: __init__.py  base.py  registry.py
thoth/mcp_server/plugins/rag/: __init__.py  base.py  handbook.py  manager.py
thoth/mcp_server/plugins/tools/: __init__.py  file_operations.py  handbook_tools.py
thoth/refresh/: __init__.py  handler.py
thoth/shared/: cli.py  embedder.py  gcs_sync.py  health.py  monitoring.py  scheduler.py  vector_store.py
thoth/shared/sources/: __init__.py  config.py
thoth/shared/utils/: __init__.py  logger.py  secrets.py
thoth/utils/: __init__.py  logger.py  secrets.py
