# ==============================================================================
# BUILD SYSTEM
# ==============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thoth"
dynamic = ["version"]
description = "DESCRIPTION"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [""]
dependencies = [
"mcp",
"gitpython>=3.1.0",
"chromadb>=0.4.0,<0.6.0",
"sentence-transformers>=2.2.0",
"torch>=2.6.0",
"click>=8.1.0",
"rich>=13.0.0",
"requests>=2.31.0",
"apscheduler>=3.10.0",
"google-cloud-storage>=2.10.0",
"google-cloud-secret-manager>=2.16.0",
"google-cloud-tasks>=2.14.0",
"google-cloud-firestore>=2.14.0",
"starlette>=0.37.0",
"uvicorn[standard]>=0.27.0",
"sse-starlette>=1.6.0",
"httpx",
"PyMuPDF>=1.23.0",
"python-docx>=1.1.0",
"python-json-logger>=2.0.0",
]
authors = [
  { name = "TheWinterShadow", email = "elijah.j.winter@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://thewintershadow.github.io/Thoth/"
Homepage = "https://github.com/TheWinterShadow/Thoth"
Repository = "https://github.com/TheWinterShadow/Thoth"
Issues = "https://github.com/TheWinterShadow/Thoth/issues"
Changelog = "https://github.com/TheWinterShadow/Thoth/blob/main/CHANGELOG.md"

[project.scripts]
thoth = "thoth.shared.cli:cli"

[project.optional-dependencies]

# Development dependencies
dev = [
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.23.0",
  "bandit>=1.7.0",
  "pre-commit>=3.0.0",
  "sphinx>=5.0.0",
  "furo>=2023.0.0",
  "mcp",
  "types-requests>=2.31.0",
  "httpx",
]

# Documentation dependencies
docs = [
  "sphinx>=5.0.0",
  "furo>=2023.0.0",
  "myst-parser>=2.0.0",
]

# All optional dependencies combined
all = [
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.23.0",
  "bandit>=1.7.0",
  "pre-commit>=3.0.0",
  "sphinx>=5.0.0",
  "furo>=2.0.0",
  "myst-parser>=2.0.0",
  "mcp",
  "httpx",
  "types-requests>=2.31.0",
]


# ==============================================================================
# HATCH CONFIGURATION
# ==============================================================================
[tool.hatch.version]
path = "thoth/__about__.py"

[tool.hatch.build]
directory = "dist"

[tool.hatch.build.targets.wheel]
packages = ["thoth"]

[tool.hatch.build.targets.sdist]
include = [
  "thoth/",
  "README.md",
  "LICENSE",
]
exclude = [
  "tests/",
  "docs/",
  ".github/",
  "*.pyc",
  "__pycache__/",
]

# ==============================================================================
# HATCH ENVIRONMENTS
# ==============================================================================
[tool.hatch.envs.default]
dependencies = [
  "mypy>=1.0.0",
  "types-requests>=2.31.0",
]

[tool.hatch.envs.dev]
dependencies = [
  # Core dependencies (needed for type checking)
  # Documentation
  "sphinx",
  "furo",
  "myst-parser", 
  # Type stubs for better IDE support and mypy
  "types-requests>=2.31.0",

  # Code formatting and linting
  "black",
  "ruff",
  "mypy",
  "pre-commit",
  # Testing
  "pytest",
  "coverage[toml]>=6.5",
  # Security
  "bandit",
]

[tool.hatch.envs.lint]
dependencies = [
  "black",
  "ruff",
  "mypy",
  "bandit",
  "pre-commit",
  "types-requests>=2.31.0",
]

[tool.hatch.envs.lint.scripts]
all = [
  "ruff check --fix .",
  "black .",
  "mypy thoth",
  "bandit -r thoth",
]
style = [
  "ruff check --fix .",
  "black .",
]
typing = "mypy thoth"
security = "bandit -r thoth"
precommit = [
  "pre-commit run --all-files || pre-commit run --all-files",
]

[tool.hatch.envs.docs]
dependencies = [
  "sphinx>=7.0",
  "shibuya",
  "myst-parser",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-redoc",
]

[tool.hatch.envs.dev.scripts]
# Type checking scripts
typecheck = "mypy thoth"
typecheck-strict = "mypy --strict thoth"
typecheck-report = "mypy --html-report mypy-report thoth"

# Pre-commit management
precommit-install = "pre-commit install"
precommit-update = "pre-commit autoupdate"
precommit-run = [
  "pre-commit run --all-files || pre-commit run --all-files",
]

[tool.hatch.envs.hatch-test]
dependencies = [
    # Core dependencies
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

# Keep test environment for backwards compatibility
[tool.hatch.envs.test]
template = "hatch-test"

# ==============================================================================
# HATCH SCRIPTS
# ==============================================================================
[tool.hatch.envs.default.scripts]
# Format code
format = [
  "ruff check --fix thoth tests",
  "black thoth tests",
]

# Check formatting and linting
format-check = [
  "black --check thoth tests",
  "ruff check thoth tests",
]

# Type checking
typecheck = "mypy --exclude 'docs' thoth"

# Security scanning
security = "bandit -r thoth"

# Full quality check pipeline
check = [
  "format",
  "format-check", 
  "typecheck",
  "security",
]

# Pre-commit integration (run twice to handle auto-fixes)
precommit = [
  "pre-commit run --all-files || pre-commit run --all-files",
]
precommit-install = "pre-commit install"

# Setup development environment
setup-dev = [
  "precommit-install",
  "echo 'Development environment setup complete!'",
]

# Testing scripts
test = "pytest {args:tests}"
test-cov = "pytest --cov=thoth --cov-report=html:docs/build/coverage --cov-report=term {args:tests}"
cov-report = [
  "pytest --cov=thoth --cov-report=term-missing {args:tests}",
]
cov-html = [
  "pytest --cov=thoth --cov-report=html:docs/build/coverage --cov-report=term {args:tests}",
  "echo 'Coverage report generated at docs/build/coverage/index.html'",
]
cov = [
  "test-cov",
]

# Build pipeline
pre-build = [
  "format",
  "format-check",
  "typecheck",
  "check",
  "precommit",
]
build = "hatch build"
clean = "hatch clean"

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs/source docs/build"
clean = "sphinx-build -b html -E docs/source docs/build"
serve = "python -m http.server 8000 --directory docs/build"



[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

# ==============================================================================
# TOOL CONFIGURATION
# ==============================================================================

# Coverage configuration
[tool.coverage.run]
source_pkgs = ["thoth", "tests"]
branch = true
parallel = true
omit = [
  "thoth/__about__.py",
]

[tool.coverage.paths]
thoth = ["thoth", "*/thoth/thoth"]
tests = ["tests", "*/thoth/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "docs/build/coverage"
title = "Thoth Test Coverage Report"

# Code formatting configuration
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

# Ruff configuration (replaces isort, flake8, and more)
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "BLE",    # flake8-blind-except
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]

# Ignore specific rules that might be too strict for this project
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "PT009",  # Use of assert in tests is acceptable
    "PT027",  # Allow unused test function arguments
    "TRY300", # Consider moving statement to else block (stylistic preference)
    "TRY301", # Abstract raise to inner function (stylistic preference)
    "PERF203", # try-except within loop (intentional for retry logic)
    "G004",  # Logging string interpolation (acceptable in some cases)
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "D",      # Don't require docstrings in tests
    "PLR2004", # Magic values are OK in tests
    "S101",   # Use of assert is OK in tests
    "ARG",    # Unused function args are OK in tests
    "SLF001", # Private member access is OK in tests (testing private methods)
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["thoth"]
force-sort-within-sections = true

# Type checking configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["docs/.*"]
# Allow imports that might not be available at runtime (like type stubs)
ignore_missing_imports = true
# Show error codes for easier debugging
show_error_codes = true
# Be strict about TYPE_CHECKING imports
warn_unused_ignores = true
# Disable caching to avoid cache corruption issues
cache_dir = "/dev/null"

# Disable no-any-return for gitlab_api.py - the .json() method returns Any
# and we can't control that. The type annotations accurately reflect what
# GitLab API returns based on their documentation.
[[tool.mypy.overrides]]
module = "thoth.ingestion.gitlab_api"
warn_return_any = false

# Security scanning configuration
[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Skip assert_used test

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
